# faker-graphics

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Justfile  LICENSE.txt  README.md  noxfile.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
rust/: Cargo.toml  pyproject.toml
rust/src/: cli.rs  drawing.rs  lib.rs  main.rs  python.rs  randomcolor.rs
src/faker_graphics/: __init__.py  __main__.py  compat.py  drawing.py  randomcolor.py
src/faker_graphics/data/: colormap.json
tests/: test_provider.py  test_randomcolor.py  test_rust_module.py
